style.css
/* ... */
.home-header-title-small {
	color: var(--off-black);
	text-decoration: none;
	font-size: clamp(18px, 2vw, 32px);
	font-weight: 800;
	font-family: "Geist Mono", monospace;
	font-variation-settings: "wght" 800;
	line-height: 1em;
	text-transform: uppercase;
	transition: letter-spacing .2s;
	position: relative;
}
.home-header-title-small:hover {
	letter-spacing: .8em;
}
.home-header-title-small:active {
	letter-spacing: .4em;
}
.home-header-desc {
	font-size: clamp(24px, 2vw, 32px);
	font-weight: 300;
	padding-top: 20px;
	font-variation-settings: "wght" 300, "SRFF" 0;
	letter-spacing: -0.05em;
	text-wrap: pretty;
}
.home-nav {
	display: flex;
	grid-auto-columns: minmax(0, 1fr);
	grid-auto-flow: column;
	max-width: 1400px;
	width: 100%;
	margin: 0 auto;
}
.home-nav-link {
	padding: 40px 20px;
	flex-grow: 1;
	flex-basis: 0;
	text-decoration: none;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	flex-direction: column;
	color: var(--off-black);
	transition: transform .2s;
}
.home-nav-link:hover {
	transform: scale(1.05);
}
.home-nav-link:active {
	transform: scale(0.9);
}
.home-nav-link-title {
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	flex-direction: column;
	color: var(--off-black);
	gap: 1vw;
	width: 100%;
	border-radius: 50%;
	transition: border-radius .2s, transform .5s;
	position: relative;
}
.home-nav-link-title-big {
	font-variation-settings: "wght" 800, "SRFF" 0;
	font-weight: 800;
	font-size: clamp(64px, 6vw, 96px);
	line-height: 1.1em;
	letter-spacing: -0.05em;
	margin-left: -.08em;
	position: relative;
	z-index: 1;
	white-space: nowrap;
}
.home-nav-link-title-big > span {
	color: var(--light-gray);
	-webkit-text-stroke: 2px var(--off-black);
	display: inline-block;
	text-shadow: .06em .06em var(--off-black);
	animation: home-nav-link-title-big-translate 1s infinite ease-in-out alternate;
}
.home-nav-link:hover .home-nav-link-title-big > span {
	color: var(--primary);
}
@keyframes home-nav-link-title-big-translate {
	from {
		transform: translateY(-.1em);
	}
	to {
		transform: translateY(.1em);
	}
}
.home-nav-link-title-big > span > span {
	display: inline-block;
	animation: home-nav-link-title-big-rotate 2s infinite ease-in-out alternate;
}
@keyframes home-nav-link-title-big-rotate {
	from {
		transform: rotate(-5deg);
	}
	to {
		transform: rotate(5deg);
	}
}
.home-nav-link-title-small {
	background-color: var(--light-gray);
	border: 2px solid var(--off-black);
	box-shadow: 5px 5px var(--off-black);
	border-radius: 20px;
	padding: .45em .8em .4em 1em;
	color: var(--off-black);
	font-size: clamp(12px, .6vw, 18px);
	font-family: "Geist Mono", monospace;
	font-weight: 900;
	font-variation-settings: "wght" 900, "SRFF" 0;
	line-height: 1em;
	text-transform: uppercase;
	letter-spacing: .2em;
	z-index: 1;
	position: relative;
	margin-bottom: .5em;
}
.home-nav-link:hover .home-nav-link-title-small {
	background-color: var(--off-white);
}
.home-nav-link-caption {
	margin-top: 2em;
	font-size: 18px;
	text-wrap: pretty;
	line-height: 1.25em;
	letter-spacing: -0.02em;
	max-width: 320px;
}
@media (max-width: 1050px) {
	.home-nav {
		flex-direction: column;
		gap: 20px;
	}
	.home-nav-link {
		flex-basis: auto;
		padding: 20px;
	}
	.home-nav-link-caption {
		margin-top: 1em;
	}
}

/* Nav */
.nav {
	position: fixed;
	top: 0;
	right: 0;
	padding: 20px;
	display: flex;
	gap: 10px;
	justify-content: end;
	z-index: 999;
}
.nav-link {
	height: 60px;
	color: var(--off-black);
	background-color: var(--light-gray);
	border: 2px solid var(--off-black);
	border-radius: 20px;
	text-decoration: none;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 0 20px;
	font-family: "Geist Mono", monospace;
	font-variation-settings: "wght" 350;
	font-weight: 350;
	font-size: 32px;
	transition: transform .5s, font-variation-settings .2s;
	box-shadow: 5px 5px var(--off-black);
}
.nav-link[data-active="1"] {
	background-color: var(--dark-gray);
	color: var(--off-white);
	font-variation-settings: "wght" 700;
	font-weight: 700;
}
.nav-link:hover {
	background-color: var(--off-white);
	color: var(--off-black);
	transform: scale(1.05);
	font-variation-settings: "wght" 700;
	font-weight: 700;
}
.nav-link:active {
	transform: scale(.9);
}
.menu-toggle {
	box-shadow: 5px 5px var(--off-black);
	width: 60px;
	height: 60px;
	border: 2px solid var(--off-black);
	border-radius: 20px;
	background-color: var(--light-gray);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 10px;
	gap: 10px;
	cursor: pointer;
	transition: transform .5s;
	flex-shrink: 0;
}
.menu-toggle div {
	height: 2px;
	flex-shrink: 0;
	background-color: var(--off-black);
	border-radius: 4px;
	width: 100%;
}
.menu-toggle:hover {
	background-color: var(--off-white);
	transform: scale(1.05);
}
.menu-toggle:active {
	transform: scale(.9);
}
@media only screen and (max-width: 800px) {
	.nav-link {
		font-size: 18px;
		height: 40px;
		border-radius: 10px;
		font-variation-settings: "wght" 450;
		font-weight: 450;
	}
	.menu-toggle {
		height: 40px;
		width: 40px;
		padding: 5px;
		gap: 5px;
		border-radius: 10px;
	}
}
@media only screen and (max-width: 400px) {
	.nav {
		padding: 10px;
	}
}

/* Menu */
.menu {
	position: fixed;
	top: 20px;
	border-radius: 20px;
	right: 20px;
	max-height: calc(100dvh - 40px);
	max-width: calc(100vw - 40px);
	width: 320px;
	border: 2px solid var(--off-black);
	background-color: var(--off-white);
	transition: transform .5s;
	z-index: 9999999;
	box-shadow: 10px 10px var(--off-black);
	overflow: scroll;
}
.menu[data-active="0"] {
	transform: translateX(calc(100% + 40px));
}
/* ... */

